--- a/html/document/app-list.html
+++ b/html/document/app-list.html
@@ -347,7 +347,7 @@
                               <use href="../../assets/svg/sprite.svg#Home"></use>
                             </svg></a></li>
                         <li class="px-2"> <span>/</span></li>
-                        <li class="breadcrumb-items capitalize active">Getting Started</li>
+                        <li class="breadcrumb-items capitalize active">App List</li>
                       </ol>
                     </nav>
                   </div>
@@ -392,39 +392,149 @@
             </nav>
           </aside>
           <!-- Page sidebar end   -->
-          <!-- Sidebar End-->
-          <!-- Page Body Start-->
         </div>
+        <!-- Sidebar End-->
+        <!-- Page Body Start-->
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap"> 
-            <div class="card col-span-12">       
-              <div class="card-header pb-2 header-bottom-border"> 
-                <h3 class="text-lg font-bold">Let's begin</h3>
-                <p>Thank you for choosing the Govo tailwind admin template</p>
+            <div class="card col-span-12">    
+              <div class="card-header pb-2 header-bottom-border">
+                <h3 class="text-lg font-bold">App list</h3>
+                <p>Follow the below steps to use the apps</p>
               </div>
-              <div class="card-body">
-                <p class="text-sm">"We are pleased that you have chosen Govo admin theme for your site and we will not disappoint you with your choice. Govo is an excellent theme develop with a concise approach. The code written is a clean and well structured."</p>
-                <p class="mt-3 text-sm text-primary"> Govo Admin is a responsive HTML template that is based on the CSS, Pure Javascript, 
-                  <mark> &nbsp;framework tailwind </mark>&nbsp;and it is built with postcss, Gulp and Pug. postcss compiler makes it easier to code and customize. If you are unfamiliar with tailwind or Gulp, visit their website and read through the documentation. All of components have been modified to fit the style of Govo Admin and provide a consistent look throughout the template.
-                </p>
-                <p class="mt-3 text-sm"> Before you start working with the template, we suggest you go through the pages that are bundled with the theme. Most of the template example pages contain quick tips on how to create or use a component which can be really helpful when you need to create something on the fly.</p>
-              </div>
-            </div>
-            <div class="card col-span-12">       
-              <div class="card-header pb-2 header-bottom-border"> 
-                <h3 class="text-lg font-bold">GOVO Dependencies</h3>
-              </div>
-              <div class="card-body">
-                <ul>
-                  <li class="text-sm leading-7">"gulp-autoprefixer": <span class="text-sm font-bold text-primary">"^8.0.0" </span></li>
-                  <li class="text-sm leading-7">"gulp-livereload": <span class="text-sm font-bold text-primary">"^4.0.2" </span></li>
-                  <li class="text-sm leading-7">"gulp-plumber": <span class="text-sm font-bold text-primary">"^1.2.1" </span></li>
-                  <li class="text-sm leading-7">"gulp-pug": <span class="text-sm font-bold text-primary">"^5.0.0" </span></li>
-                  <li class="text-sm leading-7">"gulp-purgecss": <span class="text-sm font-bold text-primary">"^4.1.3" </span></li>
-                  <li class="text-sm leading-7">"gulp-watch": <span class="text-sm font-bold text-primary">"^5.0.1" </span></li>
-                  <li class="text-sm leading-7">"save": <span class="text-sm font-bold text-primary">"^2.5.0" </span></li>
-                  <li class="text-sm leading-7">"tailwindcss-animatecss": <span class="text-sm font-bold text-primary">"^1.0.7" </span></li>
-                </ul>
+              <div class="card-body"> 
+                <div class="flex flex-col gap-5"> 
+                  <div>
+                    <h6 class="flex justify-between font-semibold">1. Chat App<span class="flex leading-none text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/govo/html/template/chat-app.html">Preview Link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the chat app</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following css in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">  
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;link  rel=&quot;stylesheet&quot; href=&quot;../../assets/css/vendors/emoji-uikit.min.css&quot;/&gt;  
+&lt;link  rel=&quot;stylesheet&quot; href=&quot;../../assets/css/vendors/photoswipe.css&quot;/&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">2. Just put the following script in the file                                        
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-xs text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;../../assets/js/emoji-picker/uikit.min.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/emoji-picker/uikit-icons.min.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/emoji-picker/vanillaEmojiPicker.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/emoji-picker/emojiPicker-custom.js&quot;&gt; &lt;/script&gt;       
+&lt;script  src=&quot;../../assets/js/photoswipe/photoswipe-lightbox.esm.js&quot;&gt; &lt;/script&gt;       
+&lt;script  src=&quot;../../assets/js/photoswipe/photoswipe-custom.js&quot;&gt; &lt;/script&gt;       
+&lt;script  src=&quot;../../assets/js/swiper-slider/swiper-bundle.min.js&quot;&gt; &lt;/script&gt;       
+&lt;script  src=&quot;../../assets/js/swiper-slider/swiper-slider-page.js&quot;&gt; &lt;/script&gt;       
+&lt;script  src=&quot;../../assets/js/chat-app/chat-app-page.js&quot;&gt; &lt;/script&gt;       </pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">2. Calendar App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/calender.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the calendar</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following css in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;link  rel=&quot;stylesheet&quot; href=&quot; ../../assets/css/vendors/calendar.css&quot;/&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">2. Just put the following script in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;../../assets/js/calender/initialize.js&quot;&gt; &lt;/script&gt;    
+&lt;script  src=&quot;../../assets/js/calender/main.min.js&quot;&gt; &lt;/script&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">
+                       3. Ecommerce App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/shop.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the ecommerce</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following css in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;link  rel=&quot;stylesheet&quot; href=&quot; ../../assets/css/vendors/swiper-bundle.min.css&quot;/&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">2. Just put the following script in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;../../assets/js/chart/apex-chart/apex-chart.js&quot;&gt; &lt;/script&gt;    
+&lt;script  src=&quot;../../assets/js/chart/apex-chart/apex-tooltip.js&quot;&gt; &lt;/script&gt;  
+&lt;script  src=&quot;../../assets/js/chart/apex-chart/ecommerce-dashboard.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/swiper-slider/swiper-bundle.min.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/swiper-slider/ecommerce-dashboard.js&quot;&gt; &lt;/script&gt;</pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">
+                       4. Email App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/shop.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the email</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following css in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;link  rel=&quot;stylesheet&quot; href=&quot;../../assets/css/vendors/filepond/filepond.css&quot;/&gt;  
+&lt;link  rel=&quot;stylesheet&quot; href=&quot;../../assets/css/vendors/filepond/filepond-plugin-image-preview.css&quot;/&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">2. Just put the following script in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;../../assets/js/filepond/filepond-plugin-image-preview.js&quot;&gt; &lt;/script&gt;  
+&lt;script  src=&quot;../../assets/js/filepond/filepond-plugin-file-rename.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/filepond/filepond-plugin-image-transform.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/filepond/filepond.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/filepond/filepond-custom.js&quot;&gt; &lt;/script&gt;    
+&lt;script  src=&quot;../../assets/js/email-app/email-app-page.js&quot;&gt; &lt;/script&gt;    </pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">
+                       5. Kanban Board App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/kanban-board.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the kanban board</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following css in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;link  rel=&quot;stylesheet&quot; href=&quot; ../../assets/css/vendors/jkanban.min.css &quot;/&gt;  </pre>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">2. Just put the following script in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;../../assets/js/jkanban.min.js&quot;&gt; &lt;/script&gt;
+&lt;script  src=&quot;../../assets/js/jkanban-custom.js&quot;&gt; &lt;/script&gt;</pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">
+                       6. Todo App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/todo-app.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"> </i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">Follow the below steps to use the todo app</p>
+                    <div class="mt-3 ml-5 text-xs font-normal text-title">1. Just put the following script in the file
+                      <div class="p-4 mt-4 bg-gray-light dark:bg-sidebar-dark2 sm:ml-0 sm:p-2">
+                        <div class="overflow-auto text-sm text-dark sm:p-2">
+                          <pre class="text-xs">&lt;script  src=&quot;src="../../assets/js/todo-app.js&quot;&gt; &lt;/script&gt;    </pre>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <h6 class="flex justify-between font-semibold">7. User App<span class="flex text-end"><a class="flex items-center gap-1 btn btn-outline btn-xs btn-primary dark:bg-sidebar-dark" target="_blank" href="https://admin.pixelstrap.com/roxo/html/template/blog-grid.html">Preview link<i class="w-4 h-4" data-feather="arrow-up-right"></i></a></span></h6>
+                    <p class="mt-3 ml-2 text-sm">You don't need any css or js to use user </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
