--- a/html/starter-kit/sample-page.html
+++ b/html/starter-kit/sample-page.html
@@ -391,7 +391,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer flex- pl-[11px] language-border rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -446,7 +446,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/index.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Home"> </use>
                                   </svg>
                                 </div>
                                 <div>
@@ -455,7 +455,7 @@
                             <li class="p-2 transition-all duration-300 rounded-5 hover:bg-gray-light dark:hover:bg-sidebar-dark2"><a class="flex items-center gap-2" href="../template/ecommerce.html"> 
                                 <div class="p-2 rounded-5  border border-primary">
                                   <svg class="w-5 h-5 stroke-primary"> 
-                                    <use href="../../assets/svg/sprite.svg#../template/Home"> </use>
+                                    <use href="../../assets/svg/sprite.svg#Bag"> </use>
                                   </svg>
                                 </div>
                                 <div>
