--- a/html/starter-kit/light.html
+++ b/html/starter-kit/light.html
@@ -36,7 +36,7 @@
                     <use href="../../assets/svg/sprite.svg#Category"> </use>
                   </svg>
                 </button>
-                <h1 class="flex items-center gap-1 text-xl font-extrabold leading-none sm:hidden dark:text-white 4xl:text-lg">Sample Page</h1>
+                <h1 class="flex items-center gap-1 text-xl font-extrabold leading-none sm:hidden dark:text-white 4xl:text-lg">Light Mode</h1>
               </div>
               <div class="right-header flex items-center flex-1 sm:gap-[calc(7px_+_(14_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] gap-[calc(16px_+_(20_-_16)_*_((100vw_-_320px)_/_(1920_-_320)))]  justify-end">
                 <div class="search-box-wrapper transition-all duration-300 max-w-[40%] 2xl:scale-0 2xl:opacity-0 2xl:invisible 2xl:px-body-space 2xl:max-w-full w-full 2xl:z-[5] flex-1 2xl:absolute 2xl:left-0">
@@ -852,17 +852,72 @@
             </div>
           </div>
         </div>
+        <!-- Page Body End -->
+        <div class="page-footer 3sm:py-6 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
+          <p class="text-xs font-semibold text-center text-content 3sm:text-2xs">Copyright 2023 © Govo theme by pixelstrap</p>
+          <div class="flex items-center gap-2"> 
+            <p class="text-xs font-semibold text-center text-content 3sm:text-2xs">Hand crafted & made with</p><i class="stroke-danger h-[18px] 3sm:h-[14px] 3sm:w-[14px] w-[18px] fill-danger" data-feather="heart"></i>
+          </div>
+        </div>
+      </div>
+      <!-- Customizer-->
+      <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2 dark:border-border-dark">
+        <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
+          <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+        </div>
+        <div class="py-[4px] dark:bg-mode-200">
+          <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
+            <ul class="flex flex-col gap-7 mode-event">
+              <li> 
+                <div>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+                </div>
+                <div class="mt-2"> 
+                  <ul class="flex items-center gap-3 flex-wrap"> 
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" checked="checked" id="light-checked" type="radio" name="mode"/><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="cursor-pointer block overflow-hidden border shadow-md mode-theme-light border-light dark:border-border-dark rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"/></label>
+                    </li>
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"/><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="cursor-pointer block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"/></label>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div>
+                  <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+                </div>
+                <div class="mt-2">
+                  <ul class="flex items-center gap-3"> 
+                    <li class="relative">
+                      <input class="absolute invisible opacity-0 peer" checked="checked" id="ltr-checked" type="radio" name="dir"/><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="cursor-pointer block overflow-hidden border shadow-md layout-ltr border-light dark:border-border-dark rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"/></label>
+                    </li>
+                    <li class="relative"> 
+                      <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"/><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                      <label class="cursor-pointer block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"/></label>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li>
+                <div class="flex items-center justify-between"><span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
+                  <label class="cursor-pointer inline-flex relative items-center">
+                    <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"/><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+                  </label>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
+          <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
+          <button class="btn btn-primary text-white flex-1">Buy Now</button>
+        </div>
       </div>
     </main>
-  </body>
-  <body class="unique-skin" dir="rtl">
-    <!-- Page Body End -->
-    <div class="page-footer 3sm:py-6 3sm:!px-[10px] fixed bottom-0 xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc(100%_-_15.8125rem)] ml-auto transition-all duration-300 sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap"> 
-      <p class="text-xs font-semibold text-center text-content 3sm:text-2xs">Copyright 2023 © Govo theme by pixelstrap</p>
-      <div class="flex items-center gap-2"> 
-        <p class="text-xs font-semibold text-center text-content 3sm:text-2xs">Hand crafted & made with</p><i class="stroke-danger h-[18px] 3sm:h-[14px] 3sm:w-[14px] w-[18px] fill-danger" data-feather="heart"></i>
-      </div>
-    </div>
   </body>
   <!-- Feather Icon Js -->
   <script src="../../assets/js/feather.min.js"></script>
